--- a/newsfragments/18.internal.rst
+++ b/newsfragments/18.internal.rst
@@ -1,1 +1,1 @@
-Modernized project setup and infrastructure. Migrated from legacy setup.py/setup.cfg to modern pyproject.toml, replaced Travis CI with GitHub Actions, updated Python version support to 3.10-3.14, replaced flake8 with ruff, and added pre-commit hooks. This is an internal change that does not affect the public API.
+Modernized project infrastructure: migrated to pyproject.toml, replaced Travis CI with GitHub Actions, updated Python support to 3.10-3.14, replaced flake8 with ruff, and added pre-commit hooks. This is an internal change that does not affect the public API.
